--- a/rioAirBnb.html
+++ b/rioAirBnb.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
   <title>AirBnb Redesign</title>
@@ -11,89 +11,120 @@
 </head> 
 <body>
   <div class="container">
-    <div class="page-header">
-      <h1>AirBnb</h1>
+    <div class="col-md-11 page-header">
+      <div class="col-md-offset-1">
+        <img class="page-logo" src="assets/rio-logo.png" />
+        <img class="page-logo pull-right" src="assets/sponsor.png" />
+      </div>
     </div>
   </div>
   <div class="jumbotron">
-    <h1 class="centered"><strong>Rio de Janieiro</strong></h1>      
+    <h1 class="centered"><strong>Explore Rio</strong></h1>      
     <p class="centered">brought to you by airbnb</p>
   </div>
 
   <div class="container">
-    <div class="row">
-      <h2 class="centered"><strong>Explore Rio De Janeiro</strong></h2>
-    </div>
-    <div class="row">
-      <p class="centered">Search listings nearby activities or <a href="https://www.airbnb.com/s/Rio-de-Janeiro--Brazil">browse all listings</a></p>
-    </div>
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
-          </div>
-        </div>
+    <div class="section-header">
+      <div class="row">
+        <h2 class="centered"><strong>What do you want to do?</strong></h2>
       </div>
-      <div class="col-sm-9">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
-          </div>
-        </div>
+      <div class="row">
+        <p class="centered">Search listings nearby activities or <a href="https://www.airbnb.com/s/Rio-de-Janeiro--Brazil">browse all listings</a></p>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-9">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
+      <div class="col-md-3 col-md-offset-1">
+        <div class="background-img-wrapper" style="background-image: url('assets/hiking.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Adventure</strong></h3>
+              <p class="catDescription">Rentals near hiking trails and scenic vistas</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
+      <div class="col-md-7">
+        <div class="background-img-wrapper" style="background-image: url('assets/olympics.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Olympic Events</strong></h3>
+              <p class="catDescription">Rentals near sporting venues and sporting events</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-4">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
+      <div class="col-md-7 col-md-offset-1">
+        <div class="background-img-wrapper" style="background-image: url('assets/wine-and-dine.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Wine and Dine</strong></h3>
+              <p class="catDescription">Rentals near the best of the food scene</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
+      <div class="col-md-3">
+        <div class="background-img-wrapper" style="background-image: url('assets/museum.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Museums</strong></h3>
+              <p class="catDescription">Rentals near museums and other family-friendly places</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="placeholder">
-          <div class="category">
-            <h3><strong>text here</strong></h3>
-            <p class="catDescription">This is a description of the category</p>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-md-offset-1">
+        <div class="background-img-wrapper" style="background-image: url('assets/night-life.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Night Life</strong></h3>
+              <p class="catDescription">Rentals near popular clubs and bars</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="background-img-wrapper" style="background-image: url('assets/surfing.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Surfing</strong></h3>
+              <p class="catDescription">Rentals near the beach</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="background-img-wrapper" style="background-image: url('assets/festival.jpg'); background-size: cover;">
+          <div class="placeholder">
+            <div class="category">
+              <h3><strong>Festivals</strong></h3>
+              <p class="catDescription">Rentals near Olympic cultural festival events</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row"><p>&nbsp;</p></div>
   </div>
+  <div class="jumbotron experiences">
+    <h1 class="centered"><strong>Tag along with locals</strong></h1>      
+    <h3 class="centered">Get off the beaten path with the Airbnb community</h3>
+    <br />
+    <br />
+    <button type="button" class="btn btn-feature center-block">See available tours</button>
+  </div>
   <footer class="footer">
     <div class="container">
-      <p class="text-muted">Place sticky footer content here.</p>
+      <div class="row">
+        <hr class="col-md-10 col-md-offset-1" />
+      </div>
+      <div class="row">
+        <p class="text-center">© Airbnb, Inc. </p>
+      </div>
     </div>
   </footer>
 
